src/style/04-components/_navbar.scss
nav {
	border-bottom: 1px solid $mediumgrey;
	padding: 1rem 0;
	position: fixed;
	width: 100%;
	top: 0;
	left: 0;
	right: 0;
	background-color: $white;
	max-height: 100vh;
	z-index: 200;

	@include mq($until: lg) {
		// overflow-y: scroll;
		// overflow-x: hidden;

		&::before {
			content: '';
			z-index: 30;
			background-color: $white;
			position: absolute;
			width: 100%;
			height: 100%;
			top: 0;
			left: 0;
		}

		.navbar-mobile {
			z-index: 30;

			.brand {
				z-index: 10;
				position: relative;
			}
		}

		&.closed {
			height: auto;

			.main-menu-inner {
				transform: translateX(100%);
			}
		}
	}
	.main-menu-inner {
		position: static;
		display: flex;
		flex: auto;
		justify-content: space-between;
		align-items: center;
		overflow-y: scroll;

		@include mq($from: lg) {
			& .list-inline>li {
				margin-left: 2rem;
			}
		}

		&>ul {
			margin-bottom: 0;
		}

		@include mq($until: lg) {
			height: 100%;
			position: fixed;
			top: 0;
			bottom: 0;
			background-color: $white;
			padding-top: 5rem;
			padding-bottom: 2rem;
			display: block;
			transform: translateX(0);
		}
	}
	.brand img {
		width: 8rem;
	}
	.brand a {
		line-height: 0;
	}

	li {
		a {
			font-size: 1rem;
			color: $darkgrey;

			&.active, &:hover, &:active, &:focus {
				color: $blue;
				text-decoration: none;

				&.has-submenu::after {
						border-color: $blue !important;
					}

			}
			&.has-submenu {
				padding-right: 1em;
				position: relative;

				&::after {
					content: '';
					position: absolute;
					right: 0.1em;
					top: 50%;
					width: 0.5em;
					height: 0.5em;
					border-width: 0;
					transform: rotate(45deg) translate(-50%, -50%);
					border-color: $darkgrey;
					border-style: solid;
					border-right-width: 0.1em;
					border-bottom-width: 0.1em;
					transition: transform 0.1s ease;
				}
			}
		}
		@include mq($from: lg) {
			&:hover {
				.has-submenu {
					&::after {
						transform: rotate(-135deg) translate(10%, 10%);
					}
				}
			}
		}
		&.expand {
			.has-submenu {
				&::after {
					transform: rotate(-135deg) translate(10%, 10%);
				}
			}
		}

	}
	.main-menu-cta {
		z-index: 30;

		.btn {
			padding: 0.4em 1.2em;
		}
	}
	.menu-toggle {
		display: none;
	}

	/******* Submenu *******/

	.submenu-parent {
		.submenu {
			position: absolute;
			width: 100%;
			left: 0;
			right: 0;
			padding: 0;
			visibility: hidden;

			&::before {
				content: '';
				position: absolute;
				width: 100%;
				height: 100%;
				transform-origin: top;
				transform: scaleY(0);
				background-color: $white;
				border-bottom: 1px solid $mediumgrey;
				transition: all 0.4s ease;

			}

			&>.container {
				padding-top: 3.125rem;
				padding-bottom: 2rem;
				transform: translateY(-2rem);
				opacity: 0;
				transition: all 0.2s ease;
				transition-delay: 0s;

				@include mq($until: lg) {
					padding-top: 0;
					padding-bottom: 0;
					transform: none;
					transition: none;
					opacity: 1;
				}
			}

			.submenu-icon {
				width: 3.125rem;
				display: block;
				clear: both;
				margin-bottom: 1rem;
			}

			a {
				color: $blue;
			}

			.submenu-title {
				padding-bottom: 1rem;
				display: block;
			}

			@include mq($until: lg) {
				overflow:hidden;
				position: relative;
				top: 1rem;
				margin-left: -1.1rem;
				margin-right: -1.1rem;
				width: 100vw;
				padding: 0 1.1rem;
				max-height: 0;
				visibility: visible;
				// transform: scaleY(0);
				// transform-origin: top;
				transition: max-height 0.4s ease;

				.col {

					border-bottom: 1px solid $mediumgrey;

					&.expanded {
						padding-bottom: 0;
						// transition: all 0.4s ease;
					}

					&:last-child {
						border-bottom: none;
					}
				}

				.submenu-title {
					display: flex;
					align-items: center;
					padding: 1rem 0;

					.submenu-icon {
						margin: 0;
						margin-right: 1rem;
					}
				}
				.has-subsubmenu {
					&>a {
						position: relative;

						&::after {
							content: '';
							position: absolute;
							right: 0.1em;
							top: 50%;
							width: 0.5em;
							height: 0.5em;
							border-width: 0;
							transform: rotate(-45deg) translate(50%, -50%);
							border-color: $darkgrey;
							border-style: solid;
							border-right-width: 0.1em;
							border-bottom-width: 0.1em;
							transition: transform 0.1s ease;
						}
					}

					&.expanded>a::after {
						transform: rotate(45deg) translate(-50%,-50%);
					}
				}
				.subsubmenu {
					max-height: 0;
					overflow: hidden;
					transition: max-height 0.4s ease;
					background-color: $lightgrey;
					padding: 0 1.1rem;
					padding-left: 6.325rem;
					margin: 0 -2.2rem;
				}
			}
		}
		@include mq($from: lg) {
			&:hover {
				.submenu {
					visibility: visible;

					&::before {
						transform: scaleY(1);
					}

					&>.container {
						opacity: 1;
						transform: translateY(0);
						transition-delay: 0.1s;
					}
				}
			}
		}
	}
	.expand {
		.submenu {
			@include mq($until: lg) {
				border-top: 1px solid $mediumgrey;
				visibility: visible;
				// margin-top: 1rem;

				.container {
					opacity: 1;
					transform: translateY(0);
				}
			}
		}
	}


	@include mq($until: lg) {

/******* Toggle *******/
		.menu-toggle {
			background: transparent;
			border: none;
			display: block;
			position: absolute;
			right: 0;
			top: 50%;
			transform: translateY(-50%);
			z-index: 999;
			padding-right: 0.975rem;

			&:hover, &:active, &:focus {
				background: transparent;
				border: none;
			}
				.top-bar {
					transform: rotate(45deg);
					transform-origin: 10% 200%;
				}
				.bottom-bar {
					transform: rotate(-45deg);
					transform-origin: 10% -60%;
				}
				.middle-bar {
					opacity: 0;
				}
			.icon-bar {
				background-color: $blue;
				display: block;
				height: 2px;
				border-radius: 5px;
				width: 18px;
				transition: all 0.2s ease 0.2s;
				margin-top: 4px;
			}
		}

		.list-inline {
			display: block;
			margin: auto;
			text-align: left;

			li {
				padding: 1rem 0;
				margin: 0;
			}
		}
		.main-menu-cta {
			text-align: center;
			z-index: 30;

			.btn {
				width: 100%;
				margin: 0.5rem 0;
			}
		}
		.main-menu-inner, .main-menu-cta{
			// max-height: 2000px;
			transition: all 0.4s ease;
			opacity: 1;
			z-index: 20;
		}

/******* Toggle *******/
		&.closed {
			// .main-menu-inner, .main-menu-cta {
			// 	padding-top: 0;
			// 	padding-bottom: 0;
			// 	box-sizing: border-box;
			// 	max-height: 0;
			// 	height: 0;
			// 	overflow: hidden;
			// 	opacity: 0;
			// }
			.menu-toggle {
				.top-bar {
					transform: rotate(0);
				}
				.bottom-bar {
					transform: rotate(0);
				}
				.bottom-bar {
					margin-bottom: 4px;
				}
				.middle-bar {
					opacity: 1;
				}
			}
		}
	}
}

/******* Clickable overlay *******/
// .navbar-overlay {
// 	display: none;
// }
// .submenu-expanded .navbar-overlay {
// 	content: '';
// 	display: block;
// 	position: fixed;
// 	width: 100%;
// 	height: 100%;
// 	z-index: 100;
// }

